--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <string name="GOOGLE_API_KEY">AIzaSyA9rTnxqBiap6yioOqcGREcyrcZno2ShGU</string>
     <string name="app_name">Dagger2_Api_Login</string>
     <string name="error_missing_network">Mất kết nối mạng!</string>
     <string name="common_noti_error_message">Kết nối thất bại, vui lòng thử lại!</string>
@@ -147,6 +149,7 @@
 
     <!--dialog trip detail start-->
     <string name="trip_detail_title_customer">Khách hàng</string>
+    <string name="trip_detail1_title_customer">Tài xế</string>
     <string name="trip_detail_title_trip">Chuyến đi</string>
     <string name="trip_detail_button_text_close">Đóng</string>
     <string name="trip_detail_button_text_cancel_trip">Hủy chuyến</string>
@@ -276,4 +279,5 @@
     <string name="text_complete">Xác nhận thành công</string>
     <string name="your_car_is_not_suitable_for_this_trip">Xe của bạn không phù hợp với chuyến đi này</string>
     <string name="this_trip_has_been_received">Đã có người nhận chuyến này</string>
+    <string name="location_null">Không xác định được vị trí</string>
 </resources>
